working task with index.html from file share

--- a/Homework_07/Azure/index.html
+++ b/Homework_07/Azure/index.html
@@ -4,6 +4,6 @@
         <title>Terraform</title>
     </head>
     <body>
-        <p>This page hosted on AWS EC2 instances in EU central zone. Application Loadbalancer is applied.</p>
+        <p>This page hosted on Azure VM instances in EU north zone. Application Gateway is applied. Devops training. </p>
     </body>
 </html>
